Fixes tag class doing too much work

--- a/src/assets/css/7-components/_postlist.scss
+++ b/src/assets/css/7-components/_postlist.scss
@@ -76,7 +76,6 @@
     }
 }
 
-.tag,
 .post-tag {
     min-width: 48px;
     min-height: 48px;
